[gd_scene load_steps=38 format=3 uid="uid://dmntloexb52bh"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_as46o"]
[ext_resource type="Texture2D" uid="uid://cbjvmcgn7fw4f" path="res://assets/MenuScreen/BomberBeast_Background.png" id="2_dm5tj"]
[ext_resource type="Texture2D" uid="uid://cymo4fmdvryy6" path="res://assets/MenuScreen/BomberBeast_Title.png" id="3_po2li"]
[ext_resource type="Texture2D" uid="uid://cgynkc0nnhwiv" path="res://assets/MenuScreen/BomberBeast_Beast_Monkey-export.png" id="4_symew"]
[ext_resource type="Texture2D" uid="uid://c4b67gj78kcbf" path="res://assets/MenuScreen/BomberBeast_Beast_Cat-export.png" id="5_spijd"]
[ext_resource type="Texture2D" uid="uid://bq6pinet7ci21" path="res://assets/MenuScreen/Pow1.png" id="6_28jq3"]
[ext_resource type="Texture2D" uid="uid://da7rb6sqdpokd" path="res://assets/MenuScreen/Pow.png" id="6_ey6xa"]
[ext_resource type="FontFile" uid="uid://bcgfc10ec43fu" path="res://04B_30__.TTF" id="8_kyalx"]
[ext_resource type="Texture2D" uid="uid://dr5tmbifrmivr" path="res://assets/MenuScreen/BomberBeast_Play_Button1-export.png" id="9_01raj"]
[ext_resource type="StyleBox" uid="uid://bss7sqjrbowl2" path="res://Themebutton/Customize.tres" id="9_yw5sp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtbu7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j7bf7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_swuki"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m7pcr"]

[sub_resource type="Theme" id="Theme_mc1ha"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0.313726, 0, 1)
Button/colors/font_hover_color = Color(0, 0.313726, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0.313726, 0, 1)
Button/colors/font_outline_color = Color(0.0666667, 0.0313726, 0.00784314, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 33
Button/fonts/font = ExtResource("8_kyalx")
Button/styles/focus = SubResource("StyleBoxEmpty_qtbu7")
Button/styles/hover = SubResource("StyleBoxEmpty_j7bf7")
Button/styles/normal = SubResource("StyleBoxEmpty_swuki")
Button/styles/pressed = SubResource("StyleBoxEmpty_m7pcr")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nhkcd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kww8y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lbn2i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f403p"]

[sub_resource type="Theme" id="Theme_pbfbe"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0.313726, 0, 1)
Button/colors/font_hover_color = Color(0, 0.313726, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0.313726, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 43
Button/fonts/font = ExtResource("8_kyalx")
Button/styles/focus = SubResource("StyleBoxEmpty_nhkcd")
Button/styles/hover = SubResource("StyleBoxEmpty_kww8y")
Button/styles/normal = SubResource("StyleBoxEmpty_lbn2i")
Button/styles/pressed = SubResource("StyleBoxEmpty_f403p")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pws0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bva70"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_twxjc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l8nob"]

[sub_resource type="Theme" id="Theme_0budq"]
Button/colors/font_color = Color(0.0431373, 0.0431373, 0.0431373, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 22
Button/fonts/font = ExtResource("8_kyalx")
Button/styles/focus = SubResource("StyleBoxEmpty_5pws0")
Button/styles/hover = SubResource("StyleBoxEmpty_bva70")
Button/styles/normal = SubResource("StyleBoxEmpty_twxjc")
Button/styles/pressed = SubResource("StyleBoxEmpty_l8nob")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tq7uo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ipjbh"]
bg_color = Color(0.364706, 0.686275, 0.396078, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.639216, 0.756863, 0.384314, 1)
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gcuji"]
bg_color = Color(0.364706, 0.686275, 0.396078, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.639216, 0.756863, 0.384314, 1)
border_blend = true
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="Theme" id="Theme_ks3xc"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 23
Button/fonts/font = ExtResource("8_kyalx")
Button/styles/focus = SubResource("StyleBoxEmpty_tq7uo")
Button/styles/hover = SubResource("StyleBoxFlat_ipjbh")
Button/styles/normal = ExtResource("9_yw5sp")
Button/styles/pressed = SubResource("StyleBoxFlat_gcuji")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mbjl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bs5ed"]
bg_color = Color(0.364706, 0.686275, 0.396078, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.639216, 0.756863, 0.384314, 1)
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ki4q"]
bg_color = Color(0.364706, 0.686275, 0.396078, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.639216, 0.756863, 0.384314, 1)
border_blend = true
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_detail = 10

[sub_resource type="Theme" id="Theme_8xt4h"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 23
Button/fonts/font = ExtResource("8_kyalx")
Button/styles/focus = SubResource("StyleBoxEmpty_8mbjl")
Button/styles/hover = SubResource("StyleBoxFlat_bs5ed")
Button/styles/normal = ExtResource("9_yw5sp")
Button/styles/pressed = SubResource("StyleBoxFlat_5ki4q")

[sub_resource type="Animation" id="Animation_bgtvb"]
resource_name = "Button_Battle_Click"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Customize:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-7.79844, 450.51), Vector2(-270, 450.51)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Quit:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-8, 536), Vector2(-192.61, 536)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MenuTitle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -176.03)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bomb/Play:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.81, 0.81), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Bomb/Play:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(125.975, 154.169), Vector2(114.577, 146.97)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PvP\':position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(250.15, 296.161), Vector2(250.15, 219.556)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PvP\':scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PvE\':scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PvE\':position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1000, 188.945), Vector2(601, 167)]
}

[sub_resource type="Animation" id="Animation_wew53"]
resource_name = "Hover"

[sub_resource type="Animation" id="Animation_r00im"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Customize:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7.79844, 450.51)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Quit:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, 536)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MenuTitle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bomb/Play:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.81, 0.81)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Bomb/Play:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(125.975, 154.169)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PvP\':position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(250.15, 219.556)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PvP\':scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PvE\':scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PvE\':position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(601, 167)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kxg2y"]
_data = {
"Button_Battle_Click": SubResource("Animation_bgtvb"),
"Hover": SubResource("Animation_wew53"),
"RESET": SubResource("Animation_r00im")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -763.0
offset_bottom = -432.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.667, 1.667)
script = ExtResource("1_as46o")
metadata/_edit_lock_ = true

[node name="MenuGround" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 7.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.994141, 0.993786)
texture = ExtResource("2_dm5tj")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="MenuTitle" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2310.0
offset_bottom = 1294.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_po2li")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="Cat" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 586.083
offset_top = -179.364
offset_right = 1236.08
offset_bottom = 463.636
texture = ExtResource("5_spijd")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Monkey" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -148.17
offset_top = -179.364
offset_right = 645.83
offset_bottom = 554.636
texture = ExtResource("4_symew")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="PvE\'" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 601.0
offset_top = 167.0
offset_right = 971.0
offset_bottom = 511.0
texture = ExtResource("6_28jq3")
expand_mode = 1

[node name="PvE" type="Button" parent="PvE\'"]
visible = false
layout_mode = 2
offset_left = 134.453
offset_top = 107.145
offset_right = 223.453
offset_bottom = 214.145
focus_neighbor_left = NodePath("../../PvP\'/PvP")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../Bomb/Play")
theme = SubResource("Theme_mc1ha")
text = "PvE"

[node name="PvP\'" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 250.15
offset_top = 219.556
offset_right = 520.151
offset_bottom = 467.556
texture = ExtResource("6_ey6xa")
expand_mode = 1

[node name="PvP" type="Button" parent="PvP\'"]
visible = false
layout_mode = 2
offset_left = 49.79
offset_top = 54.5891
offset_right = 208.79
offset_bottom = 193.589
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../PvE\'/PvE")
focus_neighbor_bottom = NodePath("../../Bomb/Play")
theme = SubResource("Theme_pbfbe")
text = "PvP"

[node name="Bomb" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 370.726
offset_top = 371.926
offset_right = 722.726
offset_bottom = 738.928
texture = ExtResource("9_01raj")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Play" type="Button" parent="Bomb"]
layout_mode = 0
offset_left = 125.975
offset_top = 154.169
offset_right = 249.975
offset_bottom = 223.169
scale = Vector2(0.81, 0.81)
focus_neighbor_right = NodePath("../../PvE\'/PvE")
focus_neighbor_bottom = NodePath(".")
theme = SubResource("Theme_0budq")
text = "BATTLE"

[node name="Area" type="Label" parent="Bomb"]
layout_mode = 0
offset_left = 115.0
offset_top = 139.0
offset_right = 239.0
offset_bottom = 221.0

[node name="Customize" type="Button" parent="."]
layout_mode = 2
offset_left = -7.79844
offset_top = 450.51
offset_right = 259.202
offset_bottom = 499.51
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../Bomb/Play")
focus_neighbor_bottom = NodePath("../Quit")
theme = SubResource("Theme_ks3xc")
text = "CUSTOMIZE"
metadata/_edit_lock_ = true

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = -8.0
offset_top = 536.0
offset_right = 179.0
offset_bottom = 585.0
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Customize")
focus_neighbor_right = NodePath("../Bomb/Play")
focus_neighbor_bottom = NodePath(".")
theme = SubResource("Theme_8xt4h")
text = "QUIT"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kxg2y")
}

[node name="OutTimer" type="Timer" parent="."]
wait_time = 0.427

[node name="InTimer" type="Timer" parent="."]
wait_time = 0.496

[connection signal="pressed" from="PvP'/PvP" to="." method="_on_pv_p_pressed"]
[connection signal="mouse_entered" from="Bomb/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="Bomb/Play" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Bomb/Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Bomb/Area" to="." method="_on_area_mouse_exited"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="OutTimer" to="." method="_on_out_timer_timeout"]
[connection signal="timeout" from="InTimer" to="." method="_on_timer_timeout"]
